--- a/playbook3.yml
+++ b/playbook3.yml
@@ -1,4 +1,7 @@
 - hosts: webservers
+  vars:
+    nginx_port: 80
+    root_dir: /usr/share/nginx/html
 
   tasks:
     - name: install nginx
@@ -10,12 +13,12 @@
     - name: copy page
       ansible.builtin.copy:
         src: files/index.html
-        dest: /usr/share/nginx/html/index.html
+        dest: "{{root_dir}}/index.html"
       become: yes
 
     - name: update nginx config
-      ansible.builtin.copy:
-        src: files/nginx.conf
+      ansible.builtin.template:
+        src: templates/nginx.conf.j2
         dest: /etc/nginx/nginx.conf
       notify:
         - restart nginx
