--- a/playbook1.yml
+++ b/playbook1.yml
@@ -1,5 +1,5 @@
 - hosts: webservers
-  gather_facts: no
+  # gather_facts: no
   vars:
     users:
       - jaime
@@ -11,6 +11,7 @@
     - name: update apt cache
       ansible.builtin.apt:
         update_cache: yes
+      when: ansible_distribution == 'Ubuntu'
       become: yes
       tags: cache
 
@@ -18,6 +19,7 @@
       ansible.builtin.apt:
         name: git
         state: present
+      when: ansible_distribution == 'Ubuntu'
       become: yes
       tags: install
 
@@ -34,4 +36,5 @@
         src: templates/.gitconfig.j2
         dest: "/home/{{ item }}/.gitconfig"
       loop: "{{ users }}"
+      when: ansible_distribution == 'Ubuntu'
       become: yes
