--- a/group_vars/webservers/all.yml
+++ b/group_vars/webservers/all.yml
@@ -1,3 +1,4 @@
 nginx_port: 8080
 root_dir: /usr/share/nginx/html
 server_name: "{{ ansible_hostname }}"
+text: "This is server {{ ansible_hostname }}"
