--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,4 @@
 [webservers]
-malcom1 ansible_host=84.252.137.102
-malcom2 ansible_host=84.201.163.49
-malcom3 ansible_host=84.252.140.50
+malcom1 ansible_host=84.252.136.202
+malcom2 ansible_host=51.250.28.46
+; malcom3 ansible_host=84.252.140.50
